Bug 1120336 - Fix another hang with blobURL+workers+indexedDB+xhr. r=khuey, a=sledru

--HG--
rename : dom/indexedDB/test/test_blob_worker_xhr_post.html => dom/indexedDB/test/test_blob_worker_xhr_post_multifile.html
rename : dom/indexedDB/test/test_blob_worker_xhr_read.html => dom/indexedDB/test/test_blob_worker_xhr_read_slice.html